--- a/alembic.ini
+++ b/alembic.ini
@@ -63,7 +63,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # output_encoding = utf-8
 
 # sqlalchemy.url = postgresql+asyncpg://%(DB_USER)s:%(DB_PASS)s@%(DB_HOST)s:%(DB_PORT)s/%(DB_NAME)s?async_fallback=True
-sqlalchemy.url = postgresql+asyncpg://postgres:5432@localhost:5432/sdek_bot?async_fallback=True
+sqlalchemy.url = postgresql+asyncpg://root:root@0.0.0.0:5432/support_db?async_fallback=True
 
 [post_write_hooks]
 # post_write_hooks defines scripts or Python functions that are run
