--- a/alembic.ini
+++ b/alembic.ini
@@ -3,7 +3,7 @@
 [alembic]
 # path to migration scripts
 # Use forward slashes (/) also on windows to provide an os agnostic path
-script_location = alembic
+script_location = ./src/services/database/migrations/
 file_template = %%(month).2d_%%(day).2d_%%(hour).2d%%(minute).2d-%%(slug)s
 
 # template used to generate migration file names; The default value is %%(rev)s_%%(slug)s
