--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
   bot:
     build:
       context: .
-    container_name: tg_bot
+    container_name: support_tg_bot
     env_file:
       - .env
     depends_on:
